tests/fixtures/invalid/int_lshift_bytes.py
# Cannot left shift Int by Bytes
x: int = 1 << b"hello"
